2001-07-19  Mark Kettenis  <kettenis@wins.uva.nl>
	    Jakub Jelinek  <jakub@redhat.com>

	* unwind-dw2.c (_Unwind_FrameState): Add eh_ptr.
	(extract_cie_info): Handle "eh" augmentation properly,
	remember eh_ptr.
	(struct frame_state, __frame_state_for): New.

2001-07-19  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* config/alpha/osf.h (ASM_OUTPUT_WEAK_ALIAS, ASM_WEAKEN_LABEL,
	HANDLE_SYSV_PRAGMA): Define.
	* mips-tfile.c (add_ext_symbol): Pass complete symbol ptr, inline
	previous args.
	(copy_object): Caller changed.

2001-07-19  Andreas Schwab  <schwab@suse.de>

	* configure.in (assembler dwarf2 debug_line support): Define nop
	insn for m68k.
	* configure: Regenerated.

2001-07-18  Jeff Sturm  <jsturm@one-point.com>

	* dwarf2out.c (dwarf2out_abstract_function): Don't emit
	in-class declaration at -g1.  Fixes c++/2814.

2001-07-18  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* defaults.h (ASM_OUTPUT_WEAK_ALIAS): Check for ASM_WEAKEN_LABEL.

2001-07-18  Andreas Schwab  <schwab@suse.de>

	* configure.in (assembler eh_frame optimization): Handle big
	endian.
	* configure: Regenerated.

2001-07-18  Tom Tromey  <tromey@redhat.com>

	For PR java/2812:
	* configure: Rebuilt.
	* configure.in: Don't check for iconv.h or iconv(); use AM_ICONV
	instead.
	* aclocal.m4 (AM_ICONV): New macro from Bruno Haible.

Wed Jul 18 12:05:29 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* gthr-posix.h (__gthread_objc_mutex_trylock): Fixed return value
	on error.  We can't blindly return the result of
	pthread_mutex_trylock because it returns a positive number on
	error, while we must return -1 on error.
	(__gthread_objc_mutex_lock, __gthread_objc_mutex_unlock): Similar
	fixes.  
	Reported by Stephen Brandon <stephen@brandonitconsulting.co.uk>.
	
2001-07-17  H.J. Lu <hjl@gnu.org>
	    Rainer Orth <ro@TechFak.Uni-Bielefeld.DE>

	* c-pragma.h (HANDLE_PRAGMA_WEAK): Define iff ASM_WEAKEN_LABEL and
	ASM_OUTPUT_WEAK_ALIAS are defined.