@@ -1,3 +1,9 @@
+2001-07-19  Mark Mitchell  <mark@codesourcery.com>
+
+	* reorg.c (fill_simple_delay_slots): If an instruction might throw
+	an exception that will be caught within this function, do not fill
+	its delay slot with any subsequent instruction.
+
 2001-07-19  Mark Kettenis  <kettenis@wins.uva.nl>
 	    Jakub Jelinek  <jakub@redhat.com>
 
